<resources>
    <string name="app_name">Notepad</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_hint">Enter your note...</string>
    <string name="save">Save</string>
    <string name="hint_content">Enter content...</string>
    <string name="hint_title">Enter title...</string>
    <string name="save_successfully">Note saved successfully</string>
    <string name="save_failed">Please enter title or content</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="delete_failed">Delete failed, you are creating a new note.</string>
    <string name="undo">Undo</string>
    <string name="search_notes">Search notes...</string>
    <string name="delete">Delete</string>
    <string name="categories">Categories</string>
    <string name="backup">Backup</string>
    <string name="trash">Trash</string>
    <string name="settings">Settings</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="new_category_name">New category name</string>
    <string name="add">ADD</string>
    <string name="import_file">Import File</string>
    <string name="export_all_files">Export All Files</string>
    <string name="note">Note</string>
    <string name="export">Export</string>
    <string name="text_size">Text size</string>
    <string name="set_default_20">SET DEFAULT (20)</string>
    <string name="add_to_categories">Add to categories</string>
    <string name="undelete">Undelete</string>
    <string name="color">Color</string>
    <string name="show_formatting">Show formatting</string>
</resources>
